--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,13 @@
 # This file is a template, and might need editing before it works on your project.
+variables:
+  DOCKER: "false"
+  HELM: "true"
+
 docker-build-master:
   # Official docker image.
   image: docker:latest
-  stage: build
+  rules:
+    - if: '$DOCKER == "true"'
   services:
     - docker:dind
   before_script:
@@ -10,13 +15,12 @@ docker-build-master:
   script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE" .
     - docker push "$CI_REGISTRY_IMAGE"
-  only:
-    - master
 
 docker-build:
   # Official docker image.
   image: docker:latest
-  stage: build
+  rules:
+    - if: '$DOCKER == "true"'
   services:
     - docker:dind
   before_script:
@@ -24,5 +28,15 @@ docker-build:
   script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG" .
     - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG"
-  except:
-    - master
+
+helm-publish:
+  image:
+    name: alpine/helm:latest
+    entrypoint: [""]
+  rules:
+    - if: '$HELM == "true"'
+  script:
+    - helm plugin install https://github.com/chartmuseum/helm-push
+    - helm repo add --username $CI_REGISTRY_USER --password $CI_REGISTRY_PASSWORD pg253 https://gitlab.com/api/v4/projects/18889048/packages/helm/stable 
+    - helm package helm/pg253
+    - helm cm-push $(find . -name "pg253-*.tgz" -type f) pg253
