--- a/helm/pg253/templates/cm-grafana.yaml
+++ b/helm/pg253/templates/cm-grafana.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    app.kubernetes.io/name: {{ .Chart.Name }} 
+    app.kubernetes.io/name: {{ include "pg253.fullname" . }}
     app.kubernetes.io/instance: {{ .Chart.Name }}
     app.kubernetes.io/component: monitoring
     app.kubernetes.io/managed-by: Helm
