--- a/helm/pg253/templates/cm-grafana.yaml
+++ b/helm/pg253/templates/cm-grafana.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/component: monitoring
     app.kubernetes.io/managed-by: Helm
     grafana_dashboard: '1'
-  name: grafana-dashboard
+  name: {{ printf "%s-%s" "grafana-dashboard" .Values.nameOverride | trimSuffix "-" }}
 data:
   grafana-dashboard.json: |-
   {{- .Files.Get "grafana-dashboard.json" | nindent 4 }}
