feat(helm): add buffer size to values.yaml
there is some issue relating to backup in ovh, which cause the process
to failed on big database.
Change buffer_size and make the buffer_size available optionnaly on values.yaml.

--- a/helm/pg253/values.yaml
+++ b/helm/pg253/values.yaml
@@ -17,6 +17,7 @@ pg:
   database: postgres
   blacklisted_databases: "postgres|rdsadmin|rdb|template1"
   retention_days: 15
+  # buffer_size: default to 10*1024*1024 (10Mb) 
 prometheus_exporter_port: 9352
 # Cron like definition of the frequency of execution
 schedule: "0 1 * * *"
