--- a/helm/pg253/templates/deployment.yaml
+++ b/helm/pg253/templates/deployment.yaml
@@ -46,6 +46,10 @@ spec:
             value: {{ .Values.schedule | quote }}
           - name: BLACKLISTED_DATABASES 
             value: {{ .Values.pg.blacklisted_databases | quote }}
+          {{- if .Values.pg.buffer_size }}
+          - name: BUFFER_SIZE
+            value: {{ .Values.pg.buffer_size | quote }}
+          {{- end }}
           envFrom:
             - secretRef:
                 name: {{ include "pg253.fullname" . }}
