--- a/helm/pg253/templates/deployment.yaml
+++ b/helm/pg253/templates/deployment.yaml
@@ -57,4 +57,5 @@ spec:
             capabilities:
               drop:
               - ALL
+          tty: true
       automountServiceAccountToken: false
