fix(chart): alerts should be fired only if errors count is greater than zero

--- a/helm/pg253/templates/alerting.yaml
+++ b/helm/pg253/templates/alerting.yaml
@@ -9,7 +9,7 @@ spec:
     - name: pg253
       rules:
         - alert: PG253BackupError
-          expr: error{container="pg253"}
+          expr: error{container="pg253"} > 0
           labels:
             severity: Critical
           annotations:
