--- a/helm/pg253/templates/secret.yaml
+++ b/helm/pg253/templates/secret.yaml
@@ -6,4 +6,6 @@ metadata:
     {{- include "pg253.labels" . | nindent 4 }}
 data:
   AWS_SECRET_ACCESS_KEY: {{ .Values.s3.aws_secret_access_key | b64enc | quote }}
+  {{- if not .Values.pg.secret_name }}
   PGPASSWORD: {{ .Values.pg.password | b64enc | quote }}
+  {{- end }}
