--- a/helm/pg253/values.yaml
+++ b/helm/pg253/values.yaml
@@ -15,6 +15,9 @@ pg:
   user: pgadmin
   password: "admin_pass"
   database: postgres
+  # K8s secret name if already created outside of this chart (will override any PG value set above)
+  # Expected secret keys are: PGHOST, PGPORT, PGUSER, PGPASSWORD and PGDATABASE
+  # secret_name: "my_secret"
   blacklisted_databases: "postgres|rdsadmin|rdb|template1"
   retention_days: 15
   # buffer_size: default to 10*1024*1024 (10Mb) 
