--- a/helm/pg253/templates/podMonitor.yaml
+++ b/helm/pg253/templates/podMonitor.yaml
@@ -13,3 +13,9 @@ spec:
   namespaceSelector:
     matchNames:
       - {{ .Release.Namespace}}
+  {{- with .Values.metricsLabels }}
+  podTargetLabels:
+  {{- range $key, $val := . }}
+  - {{ . }}
+  {{- end }}
+  {{- end }}
