--- a/helm/pg253/templates/podMonitor.yaml
+++ b/helm/pg253/templates/podMonitor.yaml
@@ -16,6 +16,6 @@ spec:
   {{- with .Values.metricsLabels }}
   podTargetLabels:
   {{- range $key, $val := . }}
-  - {{ . }}
+  - {{ $key }}
   {{- end }}
   {{- end }}
