--- a/helm/pg253/templates/cm-grafana.yaml
+++ b/helm/pg253/templates/cm-grafana.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.monitoring.defaultGrafanaDashboards.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -11,3 +12,4 @@ metadata:
 data:
   grafana-dashboard.json: |-
   {{- .Files.Get "grafana-dashboard.json" | nindent 4 }}
+{{- end }}
