--- a/helm/pg253/templates/podMonitor.yaml
+++ b/helm/pg253/templates/podMonitor.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.monitoring.podMonitor.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
@@ -19,3 +20,4 @@ spec:
   - {{ $key }}
   {{- end }}
   {{- end }}
+{{- end }}
